styles for password reset etc

--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -1,20 +1,24 @@
+
 @import '../../../styles.scss';
 
-.login-screen {
+.forgot-password-screen {
     height: 100vh;
     width: 100%;
     @include dFlex-C;
 }
 
-.login-container {
+.forgot-password-container {
+    padding-top: 150px;
+    position: relative;
+    z-index: 3;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 4px;
-    min-width: 33%;
-    height: 80%;
+    min-width: 30%;
+    height: 50%;
     z-index: 2;
     color: #fff;
-    padding: 48px 68px 18px 68px;
-    display: flex;
+    padding: 48px 68px;
+    @include dFlex-C;
     flex-direction: column;
 }
 
@@ -27,15 +31,7 @@
     background: url(../../../assets/img/movie-theater-2093264_1920.jpg) no-repeat;
     background-size: cover;
     background-position: center;
-}
 
-h1 {
-    font-weight: 700;
-    font-size: 32px;
-}
-
-.form-container {
-    margin-top: 30px;
 }
 
 form {
@@ -45,7 +41,7 @@ form {
     gap: 20px;
 
     input {
-        max-width: 100%;
+        width: 100%;
         background-color: transparent;
         border: 1px solid #fff;
         border-radius: 0.25rem;
@@ -54,7 +50,7 @@ form {
     }
 }
 
-.login-btn {
+.submit-btn {
     width: 100%;
     background-color: #c11119;
     border: none;
@@ -65,34 +61,6 @@ form {
     margin-top: 30px;
 }
 
-.row {
-    display: flex;
-    flex-direction: column;
-    gap: 6px
-}
-
-.register {
-    margin-top: 40px;
-    a {
-        font-weight: 600;
-        text-decoration: none;
-        color: #fff;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
-.forgot-pwd {
-    margin-top: 30px;
-    a {
-        font-weight: 600;
-        text-decoration: none;
-        color: #fff;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
+.form-container {
+    margin-top: 30px
 }
