--- a/src/app/components/login-screen/login-screen.component.html
+++ b/src/app/components/login-screen/login-screen.component.html
@@ -15,8 +15,9 @@
                 <button type="submit" class="login-btn">Log in</button>
             </form>
 
-            <p class="register">New to Videoflix? <a class="link" href="/register">Register here</a></p>
         </div>
+            <p class="forgot-pwd">Forgot password? <a href="/forgot-password">Reset here</a></p>
+            <p class="register">New to Videoflix? <a href="/register">Register here</a></p>
     </div>
 </div>
 
