--- a/src/app/components/register-screen/register-screen.component.scss
+++ b/src/app/components/register-screen/register-screen.component.scss
@@ -28,6 +28,34 @@
     padding: 48px 68px;
 }
 
+.alert-transparent,
+.alert-visible {
+    font-size: 12px;
+    align-self: flex-start;
+    margin-bottom: -16px;
+}
+
+.alert-transparent,
+.privacy-alert-transparent {
+    color: transparent;
+    opacity: 0;
+}
+
+.alert-visible,
+.privacy-alert-visible {
+    color: red;
+    opacity: 1;
+}
+
+.privacy-alert-transparent,
+.privacy-alert-visible {
+    font-size: 12px;
+    align-self: flex-start;
+    margin-bottom: 0px;
+    margin-top: 2px;
+    margin-left: 4px;
+}
+
 
 .form-row {
     display: flex;
@@ -41,7 +69,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 16px;
+    gap: 24px;
 }
 
 
@@ -55,7 +83,7 @@ form {
         background-color: transparent;
         border: 1px solid #fff;
         border-radius: 0.25rem;
-        color: grey;
+        color: rgb(255, 255, 255);
         padding:  12px 16px
     }
 }
@@ -81,4 +109,14 @@ h1 {
     color: #fff;
     font-weight: 600;
     padding: 12px;
+}
+
+
+
+.p-abs {
+    position: absolute;
+}
+
+.p-rel {
+    position: relative;
 }
