--- a/src/app/components/reset-password/reset-password.component.scss
+++ b/src/app/components/reset-password/reset-password.component.scss
@@ -1,19 +1,21 @@
 @import '../../../styles.scss';
 
-.login-screen {
+.reset-password-screen {
     height: 100vh;
     width: 100%;
     @include dFlex-C;
 }
 
-.login-container {
+.reset-password-container {
+    position: relative;
+    z-index: 3;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 4px;
-    min-width: 33%;
-    height: 80%;
+    min-width: 30%;
+    height: 60%;
     z-index: 2;
     color: #fff;
-    padding: 48px 68px 18px 68px;
+    padding: 48px 68px;
     display: flex;
     flex-direction: column;
 }
@@ -27,15 +29,7 @@
     background: url(../../../assets/img/movie-theater-2093264_1920.jpg) no-repeat;
     background-size: cover;
     background-position: center;
-}
 
-h1 {
-    font-weight: 700;
-    font-size: 32px;
-}
-
-.form-container {
-    margin-top: 30px;
 }
 
 form {
@@ -45,7 +39,7 @@ form {
     gap: 20px;
 
     input {
-        max-width: 100%;
+        width: 100%;
         background-color: transparent;
         border: 1px solid #fff;
         border-radius: 0.25rem;
@@ -54,7 +48,7 @@ form {
     }
 }
 
-.login-btn {
+.submit-btn {
     width: 100%;
     background-color: #c11119;
     border: none;
@@ -65,34 +59,6 @@ form {
     margin-top: 30px;
 }
 
-.row {
-    display: flex;
-    flex-direction: column;
-    gap: 6px
-}
-
-.register {
-    margin-top: 40px;
-    a {
-        font-weight: 600;
-        text-decoration: none;
-        color: #fff;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
-.forgot-pwd {
+.form-container {
     margin-top: 30px;
-    a {
-        font-weight: 600;
-        text-decoration: none;
-        color: #fff;
-
-        &:hover {
-            text-decoration: underline;
-        }
-    }
 }
