--- a/src/app/components/login-screen/login-screen.component.html
+++ b/src/app/components/login-screen/login-screen.component.html
@@ -16,8 +16,10 @@
             </form>
 
         </div>
-            <p class="forgot-pwd">Forgot password? <a href="/forgot-password">Reset here</a></p>
-            <p class="register">New to Videoflix? <a href="/register">Register here</a></p>
+        <div>
+            <p class="forgot-pwd">Forgot password? <a href="forgot-password">Reset here</a></p>
+            <p class="register">New to Videoflix? <a href="register">Register here</a></p>
+        </div>
     </div>
 </div>
 
