--- a/src/app/components/register-screen/register-screen.component.scss
+++ b/src/app/components/register-screen/register-screen.component.scss
@@ -15,7 +15,11 @@
 .register-screen {
     height: 100vh;
     width: 100%;
-    @include dFlex-C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0
 }
 
 .register-container {
@@ -26,6 +30,9 @@
     z-index: 2;
     color: #fff;
     padding: 48px 68px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .alert-transparent,
@@ -60,7 +67,7 @@
 .form-row {
     display: flex;
     flex-direction: column;
-    gap: 6px
+    gap: 4px
 }
 
 
@@ -69,14 +76,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 24px;
+    gap: 16px;
 }
 
 
 form {
     width: 100%;
     display: flex;
-    gap: 20px;
+    gap: 24px;
 
     input {
         width: 100%;
@@ -84,7 +91,7 @@ form {
         border: 1px solid #fff;
         border-radius: 0.25rem;
         color: rgb(255, 255, 255);
-        padding:  12px 16px
+        padding: 12px 16px
     }
 }
 
@@ -96,7 +103,7 @@ h1 {
 }
 
 .form-container {
-    margin: 30px 0 60px 0
+    margin: 20px 0 45px 0;
 }
 
 
